# BlockChainVoting

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  openapi.yaml  package-lock.json  package.json  prepare-sqlx.sh  reset-db.sh  run-docker.sh  run-tests.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
api/: Cargo.toml
api/src/: main.rs
backend/: .dockerignore  .env  Cargo.toml  Dockerfile  Dockerfile.arm64
backend/migrations/: 0001_initial.sql  0002_add_password_hash.sql  0003_create_polls_and_blocks.sql
backend/src/: block.rs  blockchain.rs  db.rs  election_block.rs  election_blockchain.rs  election_initializer.rs  lib.rs  main.rs  merkle_tree.rs  poll_manager.rs  user.rs  vote_service.rs  voting_integration.rs
backend/tests/: backend_tests.rs
blockchain/: Cargo.toml
blockchain/src/: block.rs  blockchain.rs  lib.rs
frontend/: .env  Dockerfile  index.html  package.json
frontend/Testing/: CreatePollPage-test.js  ElectionBallotPage-test.js
frontend/public/: index.html
frontend/src/: App.css  App.js  App.test.js  ElectionVoteDetails.jsx  index.css  index.js
frontend/src/api/: api.js
frontend/src/components/: CreatePoll.js  CreatePollPage.js  CreatePollPage.jsx  ElectionBallotPage.js  ElectionDetailsPage.jsx  ElectionVoteDetails.js  ErrorBoundary.js  ErrorSnackbar.js  ExistingPollsPage.js  Footer.js  HomePage.js  HomePage.jsx  LoadingSpinner.js  LoginPage.js  Navbar.css  Navbar.js  PollDetailsPage.jsx  PrivatePoll.js  ProfilePage.js  ProtectedRoute.js  PublicPolls.js  QRCodeDisplay.js  QRCodePage.js  RegisterPage.js  StateResultsMap.js  VotePage.js  VotePage.jsx  VotingPage.js
frontend/src/context/: PollContext.js  VoterContext.js
openapi/: openapi.yaml
