[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# Optional: if you want to generate a binary with main.rs
[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.1", features = ["runtime-tokio-native-tls", "postgres", "macros"] }
dotenv = "0.15"
serde_json = "1.0"

[dev-dependencies]
sqlx = { version = "0.8.1", features = ["runtime-tokio-native-tls", "postgres", "macros"] }
