[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# Optional: if you want to generate a binary with main.rs
[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "json", "migrate", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4"] }
argon2 = "0.5"
sha2 = "0.9"
hex = "0.4"

[dev-dependencies]
# Make sure to use the same version here
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "json", "migrate", "macros"] }